opam-version: "2.0"

name: "danbooru-tool"

maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors:    "Aaron L. Zeng <me@bcc32.com>"

homepage:    "https://github.com/bcc32/danbooru-tool"
bug-reports: "https://github.com/bcc32/danbooru-tool/issues"
dev-repo:    "git+https://github.com/bcc32/danbooru-tool"

depends: [
    "ocamlfind" {build}
    "dune"      {build & >= "2.0"}
    "topkg"     {build & >= "0.9.0"}
    "async_ssl" {>= "v0.13.0" & < "v0.14.0"}
    "async"     {>= "v0.13.0" & < "v0.14.0"}
    "cmdliner"
    "cohttp"
    "cohttp-async"
    "core"      {>= "v0.13.0" & < "v0.14.0"}
    "yojson"    {>= "1.6.0"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
